--- a/styles.css
+++ b/styles.css
@@ -475,3 +475,480 @@ img {
         grid-column: 1/3;
     }
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+/* ---------- Styles par défaut (Mobile-first) ---------- */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+img{
+    width: 100%;
+}
+
+body {
+    font-family: 'Inter', sans-serif;
+    height: 1800px;
+}
+
+/* ---------header --------- */
+
+header{
+    height: 88px;
+    background: #FFFDFA;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-header{
+    width: 343px;
+    height: 88px;
+    background-color: #FFFDFA;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo img{
+    width: 44.98px;
+    height: 28px;
+}
+
+/* Par défaut, la navbar est cachée en mobile-first */
+.navbar ul{
+    display: flex;
+    flex-direction: row;
+    width: 431px;
+    gap: 30px;
+}
+
+.navbar ul li{
+    list-style: none;
+    font-family: 'Inter', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: left;
+    color: #5E607A;
+}
+
+a{
+    text-decoration: none;
+}
+
+.navbar{
+    display: none;
+    
+}
+
+.burger-menu-button{
+    width: 40px;
+    height: 17px;
+    top: 34px;
+    left: 319px;
+}
+
+/* --------- main --------- */
+
+main{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.container-main{
+    width: 100%;
+    height: auto;
+    background-color: #FFFDFA;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 637px 489px;
+    gap: 50px;
+}
+
+.block-1{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 300px 90px 202px;
+    gap: 20px;
+}
+
+.image-1 img{
+    width: 100%;
+    height: 300px;
+    
+}
+
+h1{
+    font-family: 'Inter', sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 40px;
+    text-align: left;
+}
+
+.text-butt{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.block-1 p{
+    font-family: 'Inter', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: left;
+}
+
+.button{
+    width: 185px;
+    height: 48px;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 4.375px;
+    color: #FFFDFA;
+    background-color: #F15D51;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 30px;
+    text-align: center;
+    transition: background-color  0.4s ease, transform 0.2s ease; /* Transition pour l'effet hover */
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); /* Légère ombre pour l'effet 3D */
+}
+
+.button:hover{
+    background-color: #db8e88; /* Change la couleur au hover */
+    transform: translateY(-5px); /* Déplace légèrement le bouton vers le haut */
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2); /* Accentue l'ombre pour l'effet de levée */
+}
+
+.block-2{
+    background-color: #00001A;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 180px 140px 125px;
+    justify-content: space-around;
+}
+
+.text-1{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.text-1 h5{
+    padding-top: 10px;
+}
+
+.text-2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.text-3{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+h3{
+    width: 70px;
+    height: 32px;
+    color: #E9AA52;
+    font-family: 'Inter', sans-serif;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 32px;
+    text-align: left;
+    margin-left: 20px;
+}
+
+h5{
+    color: #FFFDFA;
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-weight: 800;
+    line-height: 24px;
+    text-align: left;
+    margin-left: 20px;
+}
+
+.block-2 p{
+    font-family: 'Inter', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: left;
+    color: #C5C6CE;
+    margin-left: 20px;
+}
+
+.line{
+    width: 302px;
+    height: 1px;
+    background: #5E607A;
+    margin-left: 20px;
+}
+
+section{
+    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.container-section{
+    background-color: #FFFDFA;
+    width: 343px;
+    height: 451px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 129px 129px 129px;
+    margin-top: 50px;
+}
+/* 
+.D01{
+    grid-column: 1/1;
+    grid-row: 1/2;
+}
+
+.D2{
+    grid-column: 1/1;
+    grid-row: 2/3;
+}
+
+.D03{
+    grid-column: 1/1;
+    grid-row: 3/4;
+} */
+
+.D01{
+    display: grid;
+    grid-template-columns: 100px 219fr;
+    grid-template-rows: 129px;
+}
+
+.D02{
+    display: grid;
+    grid-template-columns: 100px 219fr;
+    grid-template-rows: 129px;
+}
+
+.D03{
+    display: grid;
+    grid-template-columns: 100px 219fr;
+    grid-template-rows: 129px;
+}
+
+.container-section h1{
+    font-family: 'Inter', sans-serif;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 32px;
+    text-align: left;
+    color: #C5C6CE;
+    margin-left: 20px;
+}
+
+.container-section h6{
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 24px;
+    text-align: left;
+    margin-left: 20px;
+    color: #00001A;
+
+}
+
+.container-section p{
+    font-family: 'Inter', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: left;
+    margin-left: 20px;
+    color: #5E607A;
+}
+
+.D01 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.D02 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.D03 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.text-4{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.text-5{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.text-6{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.container-header, 
+.container-main, 
+.container-section {
+    width: 100%;  /* S'adapte toujours à la taille de l'écran */
+    max-width: 1200px;  /* Limite à 1200px sur les écrans larges */
+}
+
+.block-1, 
+.block-2, 
+.D01, 
+.D02, 
+.D03 {
+    width: 100%;  /* Occupe toute la largeur disponible */
+    max-width: 700px;  /* Ne dépasse pas 700px sur les grands écrans */
+    margin: 20px auto;  /* Centre chaque bloc avec un peu de marge */
+}
+
+img {
+    width: 100%;  /* Les images prennent 100% de la largeur du conteneur */
+    height: auto;  /* Conserve le ratio de l'image */
+    object-fit: cover;  /* Évite la déformation, surtout pour les images de fond */
+}
+
+@media(min-width: 375px){
+
+    .container-header{
+        min-width: 343px;
+        padding: 0px 20px 0px 20px;
+    }
+
+    .burger-menu-button{
+        padding-left: 20px;
+    }
+
+    .container-main{
+        min-width: 343px;
+        padding: 0px 20px 0px 20px;
+    }
+
+    .container-section{
+        min-width: 343px;
+        padding: 0px 20px 0px 20px;
+    }
+}
+
+@media(min-width: 768px){
+    .container-header{
+        max-width: 700px;  /* Augmente la largeur sur les tablettes et petits desktops */
+    }
+
+    .navbar ul{
+        padding-left: 40px;
+    }
+
+    .container-main {
+        max-width: 900px;
+        height: 1200px;
+    }
+
+    .burger-menu-button{
+        display: none;
+    }
+
+    .navbar{
+        display: block;
+    }
+
+    .text-4{
+        justify-content: space-evenly;
+    }
+
+    .text-5{
+        justify-content: space-evenly;
+    }
+
+    .text-6{
+        justify-content: space-evenly;
+    }
+
+}
+
+@media (min-width: 1024px) {
+
+    header{
+        max-height: 200px;
+    }
+
+    .container-header{
+        max-width: 1110px;
+        padding: 0px 20px 0px 20px;
+    }
+    
+
+    .navbar ul{
+        padding-left: 40px;
+    }
+
+    .container-main{
+        max-width: 1110px;
+        display: grid;  /* Utilise une grille pour l'organisation du contenu */
+        justify-content: center;
+        grid-template-columns: 2fr 1fr;
+        grid-template-rows: 511px;
+        gap: 50px;  /* Espace entre les colonnes */
+        height: 511px;
+        padding: 0px 20px 0px 20px;
+    }
+
+    .container-section{
+        max-width: 900px;
+        grid-template-columns: 350px 350px 350px; /* Une seule colonne par défaut */
+        grid-template-rows: 200px; /* Les lignes s'ajusteront automatiquement */
+        justify-content: center;
+        gap: 20px;
+        padding: 0px 20px 0px 20px;
+    }
+
+    .block-1{
+        display: grid;
+        grid-template-columns: 350px 350px;
+        grid-template-rows: 300px 182px;
+    }
+
+    .block-2{
+        height:490px;
+    }
+
+    .image-1{
+        grid-column: 1/3;
+    }
+}
